[package]
name = "algorithms_in_rust"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
debug = 0
strip = "none"
debug-assertions = false
overflow-checks = true
lto = "fat"
panic = "unwind"
incremental = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = 2
strip = "none"
debug-assertions = true
overflow-checks = true
lto = "off"
panic = "unwind"
incremental = true

[dependencies]
